--- a/src/package.json
+++ b/src/package.json
@@ -1,18 +1,17 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "css": "npx tailwindcss --output=public/css/app.css",
+        "css:watch": "npx tailwindcss --output=public/css/app.css --watch",
+        "js": "npx esbuild ./resources/js/app.js --bundle --outfile=public/js/app.js"
     },
     "devDependencies": {
+        "alpinejs": "^3.10.2",
         "axios": "^0.25",
+        "esbuild": "^0.14.38",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "tailwindcss": "^3.0.24"
     }
 }
